fix: set zlecenia-container height + box-sizing, fix zlecenia-center overflow-y:auto

--- a/public/css/studnie.css
+++ b/public/css/studnie.css
@@ -1450,6 +1450,7 @@
     display: grid;
     grid-template-columns: 350px 1fr 350px;
     background: var(--bg-primary);
+    height: calc(100vh - 58px);
 }
 
 .zlecenia-left {
@@ -1461,14 +1462,15 @@
     position: sticky;
     top: 0;
     z-index: 10;
-    height: 100vh;
+    height: calc(100vh - 58px);
 }
 
 .zlecenia-center {
     display: flex;
     flex-direction: column;
-    overflow: hidden;
+    overflow-y: auto;
     background: var(--bg-primary);
+    height: calc(100vh - 58px);
 }
 
 .zlecenia-right {
@@ -1477,6 +1479,13 @@
     display: flex;
     flex-direction: column;
     overflow: hidden;
+    height: calc(100vh - 58px);
+}
+
+.zlecenia-left,
+.zlecenia-center,
+.zlecenia-right {
+    box-sizing: border-box;
 }
 
 #zlecenia-modal #well-diagram-title {
